--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@react-three/rapier": "^2.2.0",
     "@supabase/supabase-js": "^2.58.0",
     "@types/leaflet": "1.9.21",
+    "@types/pg": "8.16.0",
     "@use-gesture/react": "^10.3.1",
-    "dotenv": "^17.2.3",
+    "dotenv": "17.2.3",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "leaflet": "1.9.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "meshline": "^3.3.1",
-    "next": "15.5.4",
+    "next": "16.0.10",
+    "pg": "8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-intersection-observer": "^9.16.0",
@@ -43,7 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
